--- a/lesson-15/furniture.html
+++ b/lesson-15/furniture.html
@@ -726,10 +726,12 @@
                               <p class="reviews__num">
                                  5.0</p>
                            </div>
-                           <p class="reviews__text">Lorem ipsum dolor, sit amet
-                              consectetur adipisicing elit. Vero maxime ex
-                              voluptatem rem molestiae numquam cumque odio
-                              pariatur quod nostrum!</p>
+                           <div class="reviews__text">
+                              <p>Lorem ipsum dolor, sit amet
+                                 consectetur adipisicing elit. Vero maxime ex
+                                 voluptatem rem molestiae numquam cumque odio
+                                 pariatur quod nostrum!</p>
+                           </div>
                         </div>
                      </div>
                   </div>
@@ -753,8 +755,10 @@
                               <p class="reviews__num">
                                  4.0</p>
                            </div>
-                           <p class="reviews__text">Lorem, ipsum dolor sit amet
-                              consectetur adipisicing elit. In, sint.</p>
+                           <div class="reviews__text">
+                              <p>Lorem, ipsum dolor sit amet
+                                 consectetur adipisicing elit. In, sint.</p>
+                           </div>
                         </div>
                      </div>
                   </div>
@@ -775,10 +779,12 @@
                               <p class="reviews__num">
                                  4.5</p>
                            </div>
-                           <p class="reviews__text">Lorem ipsum dolor, sit amet
-                              consectetur adipisicing elit. Vero maxime ex
-                              voluptatem rem molestiae numquam cumque odio
-                              pariatur quod nostrum!</p>
+                           <div class="reviews__text">
+                              <p>Lorem ipsum dolor, sit amet
+                                 consectetur adipisicing elit. Vero maxime ex
+                                 voluptatem rem molestiae numquam cumque odio
+                                 pariatur quod nostrum!</p>
+                           </div>
                         </div>
                      </div>
                   </div>
