--- a/lesson-18/index.html
+++ b/lesson-18/index.html
@@ -1,139 +1,52 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!-- <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon"> -->
    <link rel="stylesheet" href="css/style.css">
-   <title>Lesson </title>
+   <title>Practice</title>
 </head>
 
 <body class="body">
    <div class="wrapper">
-      <header class="header header--mb">
-         <div class="header__container">
-            <div class="header__logo">your philosophy</div>
-            <div class="menu">
-               <div class="menu__body">
-                  <ul class="menu__list">
-                     <li class="menu__item">
-                        <a href="#" class="menu__link">About us</a>
-                     </li>
-                     <li class="menu__item menu__item--parent">
-                        <a href="#" class="menu__link">Product
-                           <img src="img/header/sub-menu-arrow.svg" alt="arrow">
-                        </a>
-                        <div class="sub-menu">
-                           <ul class="sub-menu__list">
-                              <li class="sub-menu__item">
-                                 <a class="sub-menu__link" href="#">Product
-                                    1</a>
-                              </li>
-                              <li class="sub-menu__item">
-                                 <a class="sub-menu__link" href="#">Product
-                                    2</a>
-                              </li>
-                              <li class="sub-menu__item">
-                                 <a class="sub-menu__link" href="#">Product
-                                    3</a>
-                              </li>
-                              <li class="sub-menu__item">
-                                 <a class="sub-menu__link" href="#">Product
-                                    4</a>
-                              </li>
-                           </ul>
-                        </div>
-                     </li>
-                     <li class="menu__item">
-                        <a href="#" class="menu__link">Blog</a>
-                     </li>
-                     <li class="menu__item">
-                        <a href="#" class="menu__link">Contact</a>
-                     </li>
-                  </ul>
-               </div>
-            </div>
-            <div class="header__actions actions-header">
-               <a class="actions-header__item" href="#">
-                  <span>12</span>
-                  <img src="img/header/favorite.svg" alt="favorite">
-               </a>
-               <a class="actions-header__item" href="#">
-                  <span>1</span>
-                  <img src="img/header/card.svg" alt="card">
-               </a>
-            </div>
-            <button class="icon-menu" type="button">
-               <span></span>
-            </button>
-         </div>
-      </header>
-
-      <main class="page page--mb">
-         <div class="page__hero hero hero--mb">
-            <div class="hero__container">
-               <div class="decor-line-left"></div>
-               <div class="decor-line-right"></div>
-               <div class="decor-img-left">
-                  <img src="img/hero/webp/hero-bg-img-1.webp" alt="image">
-               </div>
-               <div class="decor-img-right">
-                  <img src="img/hero/webp/hero-bg-img-2.webp" alt="image">
-
-               </div>
-               <div class="hero__left-path left-path-hero">
-                  <h1 class="left-path-hero__title">Exclusive Jewelry</h1>
-                  <a href="#" class="left-path-hero__btn">Shop Now</a>
-               </div>
-               <div class="hero__img">
-                  <img src="img/hero/webp/hero-img-1.webp" alt="img">
-               </div>
-               <div class="hero__right-path right-path-hero">
-                  <p class="right-path-hero__upper-content">
-                     There are many variations of passages of Lorem Ipsum
-                     available, but the majority
-                  </p>
-                  <p class="right-path-hero__down-content">
-                     Handcrafted <br> & ethically Sources
-                  </p>
-               </div>
-
-            </div>
-         </div>
-         <div class="about about--mb">
-            <div class="about__container">
-               <div class="about__block-header block-header">
-                  <div class="block-header__label">About Us</div>
-                  <h2 class="block-header__title">We design and create custom
-                     jewelry</h2>
-                  <div class="block-header__text block-header__text--about">
-                     <p>Lorem ipsum dolor sit amet, conse elit, sedid do eiusmod
-                        tempor incidi
-                        ut labore
-                        et dolore magna aliqua. Quis ipsum usendi laboris mollit
-                     </p>
-                  </div>
-               </div>
-               <div class="about__img-block img-block">
-                  <div class="img-block__img img-block__img--small">
-                     <img src="img/about/about-img-1.webp" alt="img">
-                  </div>
-                  <div class="img-block__img img-block__img--large">
-                     <img src="img/about/about-img-2.webp" alt="img">
-                  </div>
-               </div>
+      <main class="page">
+         <div class="nav-section">
+            <div class="nav-section__container">
+               <ul class="nav-section__list nav">
+                  <li class="nav__item">
+                     <a href="#" class="nav__link nav__link--active">
+                        Home
+                     </a>
+                  </li>
+                  <li class="nav__item">
+                     <a href="jewerly.html" class="nav__link">
+                        Jewerly
+                     </a>
+                  </li>
+                  <li class="nav__item">
+                     <a href="travel.html" class="nav__link">
+                        Travel
+                     </a>
+                  </li>
+                  <li class="nav__item">
+                     <a href="interior.html" class="nav__link">
+                        Interior
+                     </a>
+                  </li>
+               </ul>
             </div>
          </div>
       </main>
       <footer class="footer">
          <div class="footer__container">
+            <p class="footer__info">Photos taken from the
+               <a href="https://www.pinterest.com/">Pinterest</a>
+            </p>
             <p class="footer__name">Fedorova Natalia</p>
          </div>
       </footer>
    </div>
-   <script src="js/js.js"></script>
 </body>
-
 
 </html>
